--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                   <a class="navbar-brand" href="#">
-                      <img src="./nike-react-main/icons/Logo.png" height="40px" width="290px" alt="">
+                      <img src="./nike-react-main/icons/Logo.png" height="40px" width="250px" alt="">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col-lg-6">
                   <div class="banner-text my-5">
-                    <h1><span>Nike React</span> 
+                    <h1><span>Nike React</span> <br>
                       Infinity Run 2</h1>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolores minus quasi? Eum excepturi, eveniet illo,</p>
                       <button class="btn btn-success">
@@ -69,6 +69,7 @@
     <main>
       <!-- sHOE -->
       <div class="container my-5">
+        <h2>Casual Shoes</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card border-0 shadow-lg h-100">
@@ -78,7 +79,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="d-flex justify-content-between m-3">
-                <h2>$234</h2>
+                <h2><span>$234</span></h2>
                 <button class="btn btn-success">
                  <i class="fas fa-cart-plus"></i>BAY NOW</button>
               </div>
@@ -92,7 +93,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="d-flex justify-content-between m-3">
-                <h2>$234</h2>
+                <h2><span>$234</span></h2>
                 <button class="btn btn-success">
                   <i class="fas fa-shopping-cart"></i> BAY NOW</button>
               </div>
@@ -108,7 +109,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
               <div class="d-flex justify-content-between m-3">
-                <h2>$234</h2>
+                <h2><span>$234</span></h2>
                 <button class="btn btn-success">
                   <i class="fas fa-shopping-cart"></i> BAY NOW</button>
               </div>
@@ -118,16 +119,17 @@
       </div>
       <!-- juta  -->
       <div class="container my-5">
+        <h2>Formal Shoes</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card border-0 shadow-lg h-100">
-              <img src="./nike-react-main/images/Mask Group.png" class="card-img-top" alt="...">
+              <img src="./nike-react-main/images/Mask Group.png" class="card-img-top " alt="...">
               <div class="card-body">
                 <h5 class="card-title">Nike Shoe</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="d-flex justify-content-between m-3">
-                <h2>$234</h2>
+                <h2><span>$234</span></h2>
                 <button class="btn btn-success">
                   <i class="fas fa-shopping-cart"></i> BAY NOW</button>
               </div>
@@ -141,7 +143,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="d-flex justify-content-between m-3">
-                <h2>$234</h2>
+                <h2><span>$234</span></h2>
                 <button class="btn btn-success"><i class="fas fa-cart-plus"></i>BAY NOW</button>
               </div>
             </div>
@@ -156,7 +158,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
               <div class="d-flex justify-content-between m-3">
-                <h2>$234</h2>
+                <h2><span>$234</span></h2>
                 <button class="btn btn-success"><i class="fas fa-cart-plus"></i>BAY NOW</button>
               </div>
             </div>
@@ -179,7 +181,7 @@
             </div>
              <div class="contact d-flex shadow-lg mb-3">
               <div class="contact-img">
-                <img src="./nike-react-main/icons/image 12.png" height="78px" width="82px" alt="">
+                <img src="./nike-react-main/icons/image 13.png" height="78px" width="82px" alt="">
               </div>
               <div class="contact-text">
                 <h2>Find the Perfect Fit</h2>
@@ -188,7 +190,7 @@
              </div>
               <div class="contact d-flex shadow-lg">
                 <div class="contact-img">
-                  <img src="./nike-react-main/icons/image 12.png" height="78px" width="82px" alt="">
+                  <img src="./nike-react-main/icons/image 14.png" height="78px" width="82px" alt="">
                 </div>
                 <div class="contact-text">
                   <h2>Find the Perfect Fit</h2>
@@ -197,7 +199,7 @@
               </div>
           </div>
           <div class="col-lg-6">
-            <img src="./nike-react-main/icons/XMLID 1.png" width="600px" height="350px" alt="">
+            <img src="./nike-react-main/icons/XMLID 1.png" width="600px" height="340px" alt="">
           </div>
         </div>
       </div>
